tests/resolve/fail_import_syntax.out
tests/resolve/modules/syntax_error.ml[1:1 ..1:4]: error
  Unexpected This, expected type
  │ 
1 │ This is a syntax error
  │ ^^^^
